<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <DatePicker
        android:id="@+id/dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:id="@+id/spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:entries="@array/ciel"
        />

    <EditText
        android:id="@+id/temperature"
        android:hint="@string/tempDegC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spin"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/vitesseVent"
        android:hint="@string/vitesseKmH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature"
        android:layout_marginTop="10dp"
        />

    <Button
        android:text="@string/validBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>