<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/entree"
        android:hint="@string/entreeStr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:hint="@string/platStr"
        android:id="@+id/plat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entree"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/plat"
        android:id="@+id/radioGrp">

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Midi"
        />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Soir"
        />
        </RadioGroup>

    <RadioButton
        android:id="@+id/radioFromage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGrp"

        android:layout_marginTop="30dp"
        android:text="Fromage" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/radioFromage"
        android:layout_alignBottom="@+id/radioFromage"
        android:layout_marginLeft="10dp"
        android:text="Fruit"
         />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >

        <Button
            android:text="@string/validBtn"
            android:id="@+id/validBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Annuler"
            android:layout_marginStart="10dp" />
    </LinearLayout>

</RelativeLayout>